azuredeploy.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "functions": [],
    "variables": {
        "webAppPortalName": "[concat(parameters('webAppName'), uniqueString(resourceGroup().id))]",
        "vnetName": "[parameters('virtualNetworkName')]",
        "vNetAddressPrefix": "10.1.0.0/16",
        "vnetResourceId": "[resourceId('Microsoft.Network/virtualNetworks', variables('vnetName'))]",
        "webNSGName": "demo-web-nsg",
        "webNSGResourceId": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('webNSGName'))]",
        "webVMName": "demo-web-vm",
        "webVMNicName": "demo-web-vm-nic",
        "webVMNicPIPName": "demo-web-vm-nic-pip",
        "webSubnetName": "demo-web-subnet",
        "webSubnetPrefix": "10.1.0.0/24",
        "appVMName": "demo-app-vm",
        "appVMNicName": "demo-app-vm-nic",
        "appNSGName": "demo-app-nsg",
        "appSubnetName": "demo-app-subnet",
        "appSubnetPrefix": "10.1.1.0/24",
        "appNSGResourceId": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('appNSGName'))]",
        "webVMNicResourceId": "[resourceId('Microsoft.Network/networkInterfaces', variables('webVMNicName'))]",
        "webVMNicPIPResourceId": "[resourceId('Microsoft.Network/publicIPAddresses', variables('webVMNicPIPName'))]",
        "webSubnetResourceId": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('vnetName'), variables('webSubnetName'))]",
        "appVMNicResourceId": "[resourceId('Microsoft.Network/networkInterfaces', variables('appVMNicName'))]",
        "appSubnetResourceId": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('vnetName'), variables('appSubnetName'))]"
    },
    "parameters": {
        "webVMUsername": {
            "type": "string"
        },
        "webVMPassword": {
            "type": "securestring"
        },
        "webAppName": {
            "type": "string",
            "metadata": {
                "description": "Base name of the resource such as web app name and app service plan "
            },
            "minLength": 2
        },
        // NSG Params
        "virtualNetworkName": {
            "type": "string"
        },
        "resourceTags": {
            "type": "object",
            "defaultValue": {
                "Environment": "Dev",
                "Project": "Demo"
            }
        }
    },
    "resources": [
        // NSG
        {
            "apiVersion": "2019-02-01",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[variables('webNSGName')]",
            "location": "[resourceGroup().location]",
            "tags": "[parameters('resourceTags')]",
            "properties": {
                "securityRules": [
                    {
                        "name": "http",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 300,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        },
        {
            "apiVersion": "2019-02-01",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[variables('appNSGName')]",
            "location": "[resourceGroup().location]",
            "tags": "[parameters('resourceTags')]",
            "properties": {
                "securityRules": [
                    {
                        "name": "http",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "10.1.0.0/24",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 300,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "DenyInbound",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 400,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        },
        // VNet
        {
            "name": "[parameters('virtualNetworkName')]",
            "type": "Microsoft.Network/VirtualNetworks",
            "apiVersion": "2022-01-01",
            "location": "[resourceGroup().location]",
            "tags": "[parameters('resourceTags')]",
            "dependsOn": [],
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[variables('vNetAddressPrefix')]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[variables('webSubnetName')]",
                        "properties": {
                            "addressPrefix": "[variables('webSubnetPrefix')]"
                        }
                    },
                    {
                        "name": "[variables('appSubnetName')]",
                        "properties": {
                            "addressPrefix": "[variables('appSubnetPrefix')]",
                            "serviceEndpoints": [ /* IDs of the Azure Services goes here */ ]
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "sku": {
                "name": "Basic",
                "tier": "Regional"
            },
            "name": "[variables('webVMNicPIPName')]",
            "apiVersion": "2018-08-01",
            "location": "[resourceGroup().location]",
            "tags": {
                "tier": "presentation"
            },
            "properties": {
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Static",
                "idleTimeoutInMinutes": 4
            },
            "dependsOn": []
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[variables('webVMNicName')]",
            "apiVersion": "2018-08-01",
            "location": "[resourceGroup().location]",
            "tags": {
                "tier": "presentation"
            },
            "scale": null,
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAddress": "10.1.0.4",
                            "privateIPAllocationMethod": "Static",
                            "publicIPAddress": {
                                "id": "[variables('webVMNicPIPResourceId')]"
                            },
                            "subnet": {
                                "id": "[variables('webSubnetResourceId')]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "primary": true,
                "networkSecurityGroup": {
                    "id": "[variables('webNSGResourceId')]"
                }
            },
            "dependsOn": [
                "[variables('webVMNicPIPName')]",
                "[variables('vnetResourceId')]",
                "[variables('webNSGResourceId')]"
            ]
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[variables('appVMNicName')]",
            "apiVersion": "2018-08-01",
            "location": "[resourceGroup().location]",
            "tags": {
                "tier": "application"
            },
            "scale": null,
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAddress": "10.1.1.4",
                            "privateIPAllocationMethod": "Static",
                            "subnet": {
                                "id": "[variables('appSubnetResourceId')]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "primary": true,
                "networkSecurityGroup": {
                    "id": "[variables('appNSGResourceId')]"
                }
            },
            "dependsOn": [
                "[variables('vnetResourceId')]",
                "[variables('appNSGResourceId')]"
            ]
        },
        {
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[variables('webVMName')]",
            "apiVersion": "2021-07-01",
            "location": "[resourceGroup().location]",
            "tags": {
                "tier": "presentation"
            },
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_B1ls"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "canonical",
                        "offer": "0001-com-ubuntu-server-focal",
                        "sku": "20_04-lts-gen2",
                        "version": "latest"
                    },
                    "osDisk": {
                        "osType": "Linux",
                        "name": "[concat(variables('webVMName'), '-disk')]",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                        "managedDisk": {
                            "storageAccountType": "StandardSSD_LRS"
                        },
                        "diskSizeGB": 30
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[variables('webVMName')]",
                    "adminUsername": "[parameters('webVMUsername')]",
                    "adminPassword": "[parameters('webVMPassword')]",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": false,
                        "provisionVMAgent": true
                    },
                    "secrets": [],
                    "allowExtensionOperations": true
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[variables('webVMNicResourceId')]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": false
                    }
                }
            },
            "dependsOn": [
                "[variables('webVMNicName')]"
            ]
        },
        {
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[variables('appVMName')]",
            "apiVersion": "2021-07-01",
            "location": "[resourceGroup().location]",
            "tags": {
                "tier": "presentation"
            },
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_B1ls"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "canonical",
                        "offer": "0001-com-ubuntu-server-focal",
                        "sku": "20_04-lts-gen2",
                        "version": "latest"
                    },
                    "osDisk": {
                        "osType": "Linux",
                        "name": "[concat(variables('appVMName'), '-disk')]",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                        "managedDisk": {
                            "storageAccountType": "StandardSSD_LRS"
                        },
                        "diskSizeGB": 30
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[variables('appVMName')]",
                    "adminUsername": "[parameters('webVMUsername')]",
                    "adminPassword": "[parameters('webVMPassword')]",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": false,
                        "provisionVMAgent": true
                    },
                    "secrets": [],
                    "allowExtensionOperations": true
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[variables('appVMNicResourceId')]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": false
                    }
                }
            },
            "dependsOn": [
                "[variables('appVMNicName')]"
            ]
        }
        
    ],
    "outputs": {    }
}
